--- a/INDEX.html
+++ b/INDEX.html
@@ -320,7 +320,7 @@
     <!-- App Logic -->
     <script>
         // --- EXISTING APP LOGIC ---
-        const GEMINI_API_KEY = "AIzaSyB8RxcsCErpMt20EUHss-bIcHHGfH7e1Gg"; // PASTE YOUR API KEY HERE
+        const GEMINI_API_KEY = "z"; // PASTE YOUR API KEY HERE
 
         const chatMessages = document.getElementById('chat-messages'), userInput = document.getElementById('user-input'), sendBtn = document.getElementById('send-btn'), previewBtn = document.getElementById('preview-btn'), editBtn = document.getElementById('edit-btn'), downloadBtn = document.getElementById('download-btn'), previewModal = document.getElementById('preview-modal'), closeModalBtn = document.getElementById('close-modal-btn'), modalContent = document.getElementById('modal-content'), photoUploadInput = document.getElementById('photo-upload-input');
 
@@ -674,5 +674,6 @@
         init();
     </script>
 </body>
+
 
 </html>
